Fixed bug causing scrollbars on screen.

--- a/views/index.css
+++ b/views/index.css
@@ -182,15 +182,15 @@ body.playlistMode #videoControls {
 
 #cornerbuttons {
     position: absolute;
-    right: 0;
+    right: 2vw;
     bottom: 0;
-    width: 70px;
+    width: 60px;
 }
 
 .togglebutton {
     font-size: 24px;
     background-color: #333;
-    margin: 0 2vw 2vh 0;
+    margin: 0 0 2vh 0;
     padding: 12px;
     border-radius: 50%;
     opacity: 0.8;
